--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
-Необходимо написать php код для сохранения формы в базу.
+Форма для сохранения данных в бд с использованием js
+
+Для работы можно использовать dump.sql, или создать все в ручную.
